[package]
name = "tokio-grpc"
version = "0.1.0"
authors = ["ttang <atory_cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
bytes = "1.0.1"
env_logger = "0.8.3"
h2 = "0.3.0"
http = "0.2.3"
prost = "0.7.0"
tokio = { version = "1.2.0", features = ["full"] }
tracing-subscriber = "0.2.16"

[build-dependencies]
prost-build = "0.7.0"
